--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@jnsdls/react-text-shuffle": "^0.1.1-alpha.15",
     "leaflet": "^1.7.1",
     "next": "11.0.1",
+    "next-seo": "^4.26.0",
     "node-geonames-client": "0.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
